<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/ic_bg"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_quiz_app_header"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:textColor="@color/white"
    />

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_welcome"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="#363A43"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_your_name"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/grey"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/waterloo">
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/start_button_text"
                    android:textSize="18sp">
            </Button>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>