<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        tools:context=".activity.ResultActivity">

    <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/result_text"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    <ImageView
            android:id="@+id/trophyImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_trophy" />

    <TextView
            android:id="@+id/congratulationsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/congratulations_text"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Username" />

    <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="20sp"
            tools:text="Your Score is 9 out of 10" />

    <Button
            android:id="@+id/finishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/finish_button_text"
            android:backgroundTint="@color/white"
            android:textSize="18sp"
            android:textColor="@color/design_default_color_primary"
            android:textStyle="bold" />
</LinearLayout>